[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wtforms-conditional-validator"
version = "0.1.0"
description = "WTForms validator for conditional required fields"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Lars de Ridder", email = "lars@xithing.io" }]
dependencies = ["WTForms>=2.0"]

[project.urls]
Homepage = "https://github.com/larsderidder/wtforms-conditional-validator"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=24.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
