[metadata]
name = wtforms-conditional-validator
version = 0.1.0
description = WTForms validator for conditional required fields
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Lars de Ridder
author_email = lars@xithing.io

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
install_requires =
    WTForms>=2.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    black
